<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hash_library_vendor</name>
  <version>0.1.0</version>
  <description>ROS2 vendor package for stbrumme/hash-library</description>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache License 2.0 -->
  <license>Zlib License</license>  <!-- hash-library is Zlib License -->

  <url type="website">https://github.com/stbrumme/hash-library</url>
  <author>Stephan Brumme</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
